src/c_parser/C/CGrammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from C/CGrammar/Par.y
-----------------------------------------------------------------------------

state 91 contains 1 shift/reduce conflicts.
state 94 contains 1 shift/reduce conflicts.
state 142 contains 1 shift/reduce conflicts.
state 149 contains 1 shift/reduce conflicts.
state 153 contains 2 shift/reduce conflicts.
state 192 contains 1 shift/reduce conflicts.
state 193 contains 1 shift/reduce conflicts.
state 195 contains 1 shift/reduce conflicts.
state 197 contains 1 shift/reduce conflicts.
state 203 contains 14 shift/reduce conflicts.
state 245 contains 2 shift/reduce conflicts.
state 253 contains 1 shift/reduce conflicts.
state 256 contains 14 shift/reduce conflicts.
state 280 contains 3 shift/reduce conflicts.
state 319 contains 2 shift/reduce conflicts.
state 325 contains 1 shift/reduce conflicts.
state 343 contains 1 shift/reduce conflicts.
state 406 contains 1 shift/reduce conflicts.
state 421 contains 1 shift/reduce conflicts.
state 422 contains 1 shift/reduce conflicts.
state 470 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pTranslationUnit -> TranslationUnit         (0)
	%start_pExternal_Declaration -> External_Declaration   (1)
	%start_pListExternal_Declaration -> ListExternal_Declaration   (2)
	%start_pFunctionDefinition -> FunctionDefinition   (3)
	%start_pDeclarationSpecifier -> DeclarationSpecifier   (4)
	%start_pListDeclarationSpecifier -> ListDeclarationSpecifier   (5)
	%start_pStorageClassSpecifier -> StorageClassSpecifier   (6)
	%start_pTypeSpecifier -> TypeSpecifier             (7)
	%start_pStructOrUnionSpecifier -> StructOrUnionSpecifier   (8)
	%start_pStructOrUnion -> StructOrUnion             (9)
	%start_pStructDeclaration -> StructDeclaration     (10)
	%start_pListStructDeclaration -> ListStructDeclaration   (11)
	%start_pSpecifierQualifier -> SpecifierQualifier   (12)
	%start_pListSpecifierQualifier -> ListSpecifierQualifier   (13)
	%start_pStructDeclarator -> StructDeclarator       (14)
	%start_pListStructDeclarator -> ListStructDeclarator   (15)
	%start_pDeclarator -> Declarator                   (16)
	%start_pPointer -> Pointer                         (17)
	%start_pListPointer -> ListPointer                 (18)
	%start_pTypeQualifier -> TypeQualifier             (19)
	%start_pListTypeQualifier -> ListTypeQualifier     (20)
	%start_pDirectDeclarator -> DirectDeclarator       (21)
	%start_pListIdent -> ListIdent                     (22)
	%start_pConstantExpression -> ConstantExpression   (23)
	%start_pExpression2 -> Expression2                 (24)
	%start_pExpression3 -> Expression3                 (25)
	%start_pExpression4 -> Expression4                 (26)
	%start_pExpression5 -> Expression5                 (27)
	%start_pExpression6 -> Expression6                 (28)
	%start_pExpression7 -> Expression7                 (29)
	%start_pExpression8 -> Expression8                 (30)
	%start_pExpression9 -> Expression9                 (31)
	%start_pExpression10 -> Expression10               (32)
	%start_pExpression11 -> Expression11               (33)
	%start_pExpression12 -> Expression12               (34)
	%start_pExpression13 -> Expression13               (35)
	%start_pExpression14 -> Expression14               (36)
	%start_pExpression15 -> Expression15               (37)
	%start_pExpression16 -> Expression16               (38)
	%start_pConstant -> Constant                       (39)
	%start_pExpression -> Expression                   (40)
	%start_pExpression1 -> Expression1                 (41)
	%start_pListExpression1 -> ListExpression1         (42)
	%start_pAssignmentOperator -> AssignmentOperator   (43)
	%start_pUnaryOperator -> UnaryOperator             (44)
	%start_pTypeName -> TypeName                       (45)
	%start_pParameterTypeList -> ParameterTypeList     (46)
	%start_pParameterDeclaration -> ParameterDeclaration   (47)
	%start_pListParameterDeclaration -> ListParameterDeclaration   (48)
	%start_pAbstractDeclarator -> AbstractDeclarator   (49)
	%start_pDirectAbstractDeclarator -> DirectAbstractDeclarator   (50)
	%start_pEnumSpecifier -> EnumSpecifier             (51)
	%start_pEnumerator -> Enumerator                   (52)
	%start_pListEnumerator -> ListEnumerator           (53)
	%start_pDeclaration -> Declaration                 (54)
	%start_pListDeclaration -> ListDeclaration         (55)
	%start_pInitDeclarator -> InitDeclarator           (56)
	%start_pListInitDeclarator -> ListInitDeclarator   (57)
	%start_pInitializer -> Initializer                 (58)
	%start_pListInitializer -> ListInitializer         (59)
	%start_pCompound_Statement -> Compound_Statement   (60)
	%start_pStatement -> Statement                     (61)
	%start_pListStatement -> ListStatement             (62)
	%start_pLabeledStatement -> LabeledStatement       (63)
	%start_pExpressionStatement -> ExpressionStatement   (64)
	%start_pSelectionStatement -> SelectionStatement   (65)
	%start_pIterationStatement -> IterationStatement   (66)
	%start_pMayBeExpression -> MayBeExpression         (67)
	%start_pJumpStatement -> JumpStatement             (68)
	Ident -> L_Ident                                   (69)
	Char -> L_charac                                   (70)
	Double -> L_doubl                                  (71)
	Integer -> L_integ                                 (72)
	String -> L_quoted                                 (73)
	TranslationUnit -> ListExternal_Declaration        (74)
	External_Declaration -> FunctionDefinition         (75)
	External_Declaration -> Declaration                (76)
	ListExternal_Declaration ->                        (77)
	ListExternal_Declaration -> External_Declaration ListExternal_Declaration   (78)
	FunctionDefinition -> ListDeclarationSpecifier Declarator ListDeclaration Compound_Statement   (79)
	DeclarationSpecifier -> StorageClassSpecifier      (80)
	DeclarationSpecifier -> TypeSpecifier              (81)
	DeclarationSpecifier -> TypeQualifier              (82)
	ListDeclarationSpecifier ->                        (83)
	ListDeclarationSpecifier -> DeclarationSpecifier ListDeclarationSpecifier   (84)
	StorageClassSpecifier -> 'auto'                    (85)
	StorageClassSpecifier -> 'register'                (86)
	StorageClassSpecifier -> 'static'                  (87)
	StorageClassSpecifier -> 'extern'                  (88)
	StorageClassSpecifier -> 'typedef'                 (89)
	TypeSpecifier -> 'void'                            (90)
	TypeSpecifier -> 'char'                            (91)
	TypeSpecifier -> 'short'                           (92)
	TypeSpecifier -> 'int'                             (93)
	TypeSpecifier -> 'long'                            (94)
	TypeSpecifier -> 'float'                           (95)
	TypeSpecifier -> 'double'                          (96)
	TypeSpecifier -> 'signed'                          (97)
	TypeSpecifier -> 'unsigned'                        (98)
	TypeSpecifier -> StructOrUnionSpecifier            (99)
	TypeSpecifier -> EnumSpecifier                     (100)
	StructOrUnionSpecifier -> StructOrUnion Ident '{' ListStructDeclaration '}'   (101)
	StructOrUnionSpecifier -> StructOrUnion '{' ListStructDeclaration '}'   (102)
	StructOrUnionSpecifier -> StructOrUnion Ident      (103)
	StructOrUnion -> 'struct'                          (104)
	StructOrUnion -> 'union'                           (105)
	StructDeclaration -> ListSpecifierQualifier ListStructDeclarator   (106)
	ListStructDeclaration -> StructDeclaration         (107)
	ListStructDeclaration -> StructDeclaration ListStructDeclaration   (108)
	SpecifierQualifier -> TypeSpecifier                (109)
	SpecifierQualifier -> TypeQualifier                (110)
	ListSpecifierQualifier ->                          (111)
	ListSpecifierQualifier -> SpecifierQualifier ListSpecifierQualifier   (112)
	StructDeclarator -> Declarator                     (113)
	StructDeclarator -> Declarator ':' ConstantExpression   (114)
	StructDeclarator -> ':' ConstantExpression         (115)
	ListStructDeclarator -> StructDeclarator           (116)
	ListStructDeclarator -> StructDeclarator ',' ListStructDeclarator   (117)
	Declarator -> Pointer DirectDeclarator             (118)
	Declarator -> DirectDeclarator                     (119)
	Pointer -> '*' ListTypeQualifier                   (120)
	ListPointer -> Pointer                             (121)
	ListPointer -> Pointer ListPointer                 (122)
	TypeQualifier -> 'const'                           (123)
	TypeQualifier -> 'volatile'                        (124)
	ListTypeQualifier ->                               (125)
	ListTypeQualifier -> TypeQualifier ListTypeQualifier   (126)
	DirectDeclarator -> Ident                          (127)
	DirectDeclarator -> '(' Declarator ')'             (128)
	DirectDeclarator -> DirectDeclarator '[' ConstantExpression ']'   (129)
	DirectDeclarator -> DirectDeclarator '[' ']'       (130)
	DirectDeclarator -> DirectDeclarator '(' ParameterTypeList ')'   (131)
	DirectDeclarator -> DirectDeclarator '(' ListIdent ')'   (132)
	ListIdent ->                                       (133)
	ListIdent -> Ident ListIdent                       (134)
	ConstantExpression -> Expression2                  (135)
	Expression2 -> Expression3                         (136)
	Expression2 -> Expression3 '?' Expression ':' Expression2   (137)
	Expression3 -> Expression4                         (138)
	Expression3 -> Expression3 '||' Expression4        (139)
	Expression4 -> Expression5                         (140)
	Expression4 -> Expression4 '&&' Expression5        (141)
	Expression5 -> Expression6                         (142)
	Expression5 -> Expression5 '|' Expression6         (143)
	Expression6 -> Expression7                         (144)
	Expression6 -> Expression6 '^' Expression7         (145)
	Expression7 -> Expression8                         (146)
	Expression7 -> Expression7 '&' Expression8         (147)
	Expression8 -> Expression9                         (148)
	Expression8 -> Expression8 '==' Expression9        (149)
	Expression8 -> Expression8 '!=' Expression9        (150)
	Expression9 -> Expression10                        (151)
	Expression9 -> Expression9 '<' Expression10        (152)
	Expression9 -> Expression9 '>' Expression10        (153)
	Expression9 -> Expression9 '<=' Expression10       (154)
	Expression9 -> Expression9 '>=' Expression10       (155)
	Expression10 -> Expression11                       (156)
	Expression10 -> Expression10 '<<' Expression11     (157)
	Expression10 -> Expression10 '>>' Expression11     (158)
	Expression11 -> Expression12                       (159)
	Expression11 -> Expression11 '+' Expression12      (160)
	Expression11 -> Expression11 '-' Expression12      (161)
	Expression12 -> Expression13                       (162)
	Expression12 -> Expression12 '*' Expression13      (163)
	Expression12 -> Expression12 '/' Expression13      (164)
	Expression12 -> Expression12 '%' Expression13      (165)
	Expression13 -> Expression14                       (166)
	Expression13 -> '(' TypeName ')' Expression13      (167)
	Expression14 -> Expression15                       (168)
	Expression14 -> '++' Expression14                  (169)
	Expression14 -> '--' Expression14                  (170)
	Expression14 -> UnaryOperator Expression13         (171)
	Expression14 -> 'sizeof' Expression14              (172)
	Expression14 -> 'sizeof' TypeName                  (173)
	Expression15 -> Expression16                       (174)
	Expression15 -> Expression15 '[' Expression ']'    (175)
	Expression15 -> Expression15 '(' ')'               (176)
	Expression15 -> Expression15 '(' ListExpression1 ')'   (177)
	Expression15 -> Expression15 '.' Ident             (178)
	Expression15 -> Expression15 '->' Ident            (179)
	Expression15 -> Expression15 '++'                  (180)
	Expression15 -> Expression15 '--'                  (181)
	Expression16 -> Ident                              (182)
	Expression16 -> Constant                           (183)
	Expression16 -> String                             (184)
	Expression16 -> '(' Expression ')'                 (185)
	Constant -> Integer                                (186)
	Constant -> Char                                   (187)
	Constant -> Double                                 (188)
	Expression -> ListExpression1                      (189)
	Expression1 -> Expression2                         (190)
	Expression1 -> Expression14 AssignmentOperator Expression1   (191)
	ListExpression1 -> Expression1                     (192)
	ListExpression1 -> Expression1 ',' ListExpression1   (193)
	AssignmentOperator -> '='                          (194)
	AssignmentOperator -> '*='                         (195)
	AssignmentOperator -> '/='                         (196)
	AssignmentOperator -> '%='                         (197)
	AssignmentOperator -> '+='                         (198)
	AssignmentOperator -> '-='                         (199)
	AssignmentOperator -> '<<='                        (200)
	AssignmentOperator -> '>>='                        (201)
	AssignmentOperator -> '&='                         (202)
	AssignmentOperator -> '^='                         (203)
	AssignmentOperator -> '|='                         (204)
	UnaryOperator -> '&'                               (205)
	UnaryOperator -> '*'                               (206)
	UnaryOperator -> '+'                               (207)
	UnaryOperator -> '-'                               (208)
	UnaryOperator -> '~'                               (209)
	UnaryOperator -> '!'                               (210)
	TypeName -> SpecifierQualifier ListSpecifierQualifier AbstractDeclarator   (211)
	TypeName -> SpecifierQualifier ListSpecifierQualifier   (212)
	ParameterTypeList -> ListParameterDeclaration      (213)
	ParameterTypeList -> ListParameterDeclaration ',' '...'   (214)
	ParameterDeclaration -> DeclarationSpecifier ListDeclarationSpecifier Declarator   (215)
	ParameterDeclaration -> DeclarationSpecifier ListDeclarationSpecifier AbstractDeclarator   (216)
	ParameterDeclaration -> DeclarationSpecifier ListDeclarationSpecifier   (217)
	ListParameterDeclaration -> ParameterDeclaration   (218)
	ListParameterDeclaration -> ParameterDeclaration ',' ListParameterDeclaration   (219)
	AbstractDeclarator -> ListPointer                  (220)
	AbstractDeclarator -> ListPointer DirectAbstractDeclarator   (221)
	AbstractDeclarator -> DirectAbstractDeclarator     (222)
	DirectAbstractDeclarator -> '(' AbstractDeclarator ')'   (223)
	DirectAbstractDeclarator -> DirectAbstractDeclarator '[' ConstantExpression ']'   (224)
	DirectAbstractDeclarator -> DirectAbstractDeclarator '[' ']'   (225)
	DirectAbstractDeclarator -> '[' ConstantExpression ']'   (226)
	DirectAbstractDeclarator -> '[' ']'                (227)
	DirectAbstractDeclarator -> DirectAbstractDeclarator '(' ParameterTypeList ')'   (228)
	DirectAbstractDeclarator -> DirectAbstractDeclarator '(' ')'   (229)
	DirectAbstractDeclarator -> '(' ParameterTypeList ')'   (230)
	DirectAbstractDeclarator -> '(' ')'                (231)
	EnumSpecifier -> 'enum' Ident '{' ListEnumerator '}'   (232)
	EnumSpecifier -> 'enum' '{' ListEnumerator '}'     (233)
	EnumSpecifier -> 'enum' Ident                      (234)
	Enumerator -> Ident                                (235)
	Enumerator -> Ident '=' ConstantExpression         (236)
	ListEnumerator -> Enumerator                       (237)
	ListEnumerator -> Enumerator ',' ListEnumerator    (238)
	Declaration -> DeclarationSpecifier ListDeclarationSpecifier ListInitDeclarator ';'   (239)
	ListDeclaration ->                                 (240)
	ListDeclaration -> Declaration ListDeclaration     (241)
	InitDeclarator -> Declarator                       (242)
	InitDeclarator -> Declarator '=' Initializer       (243)
	ListInitDeclarator ->                              (244)
	ListInitDeclarator -> InitDeclarator ListInitDeclarator   (245)
	Initializer -> Expression1                         (246)
	Initializer -> '{' ListInitializer '}'             (247)
	Initializer -> '{' ListInitializer ',' '}'         (248)
	ListInitializer -> Initializer                     (249)
	ListInitializer -> Initializer ',' ListInitializer   (250)
	Compound_Statement -> '{' ListDeclaration ListStatement '}'   (251)
	Statement -> LabeledStatement                      (252)
	Statement -> ExpressionStatement                   (253)
	Statement -> Compound_Statement                    (254)
	Statement -> SelectionStatement                    (255)
	Statement -> IterationStatement                    (256)
	Statement -> JumpStatement                         (257)
	ListStatement ->                                   (258)
	ListStatement -> Statement ListStatement           (259)
	LabeledStatement -> Ident ':' Statement            (260)
	LabeledStatement -> 'case' ConstantExpression ':' Statement   (261)
	LabeledStatement -> 'default' ':' Statement        (262)
	ExpressionStatement -> MayBeExpression ';'         (263)
	SelectionStatement -> 'if' '(' Expression ')' Statement   (264)
	SelectionStatement -> 'if' '(' Expression ')' Statement 'else' Statement   (265)
	SelectionStatement -> 'switch' '(' Expression ')' Statement   (266)
	IterationStatement -> 'while' '(' Expression ')' Statement   (267)
	IterationStatement -> 'do' Statement 'while' '(' Expression ')' ';'   (268)
	IterationStatement -> 'for' '(' MayBeExpression ';' MayBeExpression ';' MayBeExpression ')' Statement   (269)
	MayBeExpression -> Expression                      (270)
	MayBeExpression ->                                 (271)
	JumpStatement -> 'goto' Ident ';'                  (272)
	JumpStatement -> 'continue' ';'                    (273)
	JumpStatement -> 'break' ';'                       (274)
	JumpStatement -> 'return' MayBeExpression ';'      (275)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'%='           { PT _ (TS _ 4) }
	'&'            { PT _ (TS _ 5) }
	'&&'           { PT _ (TS _ 6) }
	'&='           { PT _ (TS _ 7) }
	'('            { PT _ (TS _ 8) }
	')'            { PT _ (TS _ 9) }
	'*'            { PT _ (TS _ 10) }
	'*='           { PT _ (TS _ 11) }
	'+'            { PT _ (TS _ 12) }
	'++'           { PT _ (TS _ 13) }
	'+='           { PT _ (TS _ 14) }
	','            { PT _ (TS _ 15) }
	'-'            { PT _ (TS _ 16) }
	'--'           { PT _ (TS _ 17) }
	'-='           { PT _ (TS _ 18) }
	'->'           { PT _ (TS _ 19) }
	'.'            { PT _ (TS _ 20) }
	'...'          { PT _ (TS _ 21) }
	'/'            { PT _ (TS _ 22) }
	'/='           { PT _ (TS _ 23) }
	':'            { PT _ (TS _ 24) }
	';'            { PT _ (TS _ 25) }
	'<'            { PT _ (TS _ 26) }
	'<<'           { PT _ (TS _ 27) }
	'<<='          { PT _ (TS _ 28) }
	'<='           { PT _ (TS _ 29) }
	'='            { PT _ (TS _ 30) }
	'=='           { PT _ (TS _ 31) }
	'>'            { PT _ (TS _ 32) }
	'>='           { PT _ (TS _ 33) }
	'>>'           { PT _ (TS _ 34) }
	'>>='          { PT _ (TS _ 35) }
	'?'            { PT _ (TS _ 36) }
	'['            { PT _ (TS _ 37) }
	']'            { PT _ (TS _ 38) }
	'^'            { PT _ (TS _ 39) }
	'^='           { PT _ (TS _ 40) }
	'auto'         { PT _ (TS _ 41) }
	'break'        { PT _ (TS _ 42) }
	'case'         { PT _ (TS _ 43) }
	'char'         { PT _ (TS _ 44) }
	'const'        { PT _ (TS _ 45) }
	'continue'     { PT _ (TS _ 46) }
	'default'      { PT _ (TS _ 47) }
	'do'           { PT _ (TS _ 48) }
	'double'       { PT _ (TS _ 49) }
	'else'         { PT _ (TS _ 50) }
	'enum'         { PT _ (TS _ 51) }
	'extern'       { PT _ (TS _ 52) }
	'float'        { PT _ (TS _ 53) }
	'for'          { PT _ (TS _ 54) }
	'goto'         { PT _ (TS _ 55) }
	'if'           { PT _ (TS _ 56) }
	'int'          { PT _ (TS _ 57) }
	'long'         { PT _ (TS _ 58) }
	'register'     { PT _ (TS _ 59) }
	'return'       { PT _ (TS _ 60) }
	'short'        { PT _ (TS _ 61) }
	'signed'       { PT _ (TS _ 62) }
	'sizeof'       { PT _ (TS _ 63) }
	'static'       { PT _ (TS _ 64) }
	'struct'       { PT _ (TS _ 65) }
	'switch'       { PT _ (TS _ 66) }
	'typedef'      { PT _ (TS _ 67) }
	'union'        { PT _ (TS _ 68) }
	'unsigned'     { PT _ (TS _ 69) }
	'void'         { PT _ (TS _ 70) }
	'volatile'     { PT _ (TS _ 71) }
	'while'        { PT _ (TS _ 72) }
	'{'            { PT _ (TS _ 73) }
	'|'            { PT _ (TS _ 74) }
	'|='           { PT _ (TS _ 75) }
	'||'           { PT _ (TS _ 76) }
	'}'            { PT _ (TS _ 77) }
	'~'            { PT _ (TS _ 78) }
	L_Ident        { PT _ (TV $$) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pTranslationUnit rule  0
	%start_pExternal_Declaration rule  1
	%start_pListExternal_Declaration rule  2
	%start_pFunctionDefinition rule  3
	%start_pDeclarationSpecifier rule  4
	%start_pListDeclarationSpecifier rule  5
	%start_pStorageClassSpecifier rule  6
	%start_pTypeSpecifier rule  7
	%start_pStructOrUnionSpecifier rule  8
	%start_pStructOrUnion rule  9
	%start_pStructDeclaration rule  10
	%start_pListStructDeclaration rule  11
	%start_pSpecifierQualifier rule  12
	%start_pListSpecifierQualifier rule  13
	%start_pStructDeclarator rule  14
	%start_pListStructDeclarator rule  15
	%start_pDeclarator rule  16
	%start_pPointer rule  17
	%start_pListPointer rule  18
	%start_pTypeQualifier rule  19
	%start_pListTypeQualifier rule  20
	%start_pDirectDeclarator rule  21
	%start_pListIdent rule  22
	%start_pConstantExpression rule  23
	%start_pExpression2 rule  24
	%start_pExpression3 rule  25
	%start_pExpression4 rule  26
	%start_pExpression5 rule  27
	%start_pExpression6 rule  28
	%start_pExpression7 rule  29
	%start_pExpression8 rule  30
	%start_pExpression9 rule  31
	%start_pExpression10 rule  32
	%start_pExpression11 rule  33
	%start_pExpression12 rule  34
	%start_pExpression13 rule  35
	%start_pExpression14 rule  36
	%start_pExpression15 rule  37
	%start_pExpression16 rule  38
	%start_pConstant rule  39
	%start_pExpression rule  40
	%start_pExpression1 rule  41
	%start_pListExpression1 rule  42
	%start_pAssignmentOperator rule  43
	%start_pUnaryOperator rule  44
	%start_pTypeName rule  45
	%start_pParameterTypeList rule  46
	%start_pParameterDeclaration rule  47
	%start_pListParameterDeclaration rule  48
	%start_pAbstractDeclarator rule  49
	%start_pDirectAbstractDeclarator rule  50
	%start_pEnumSpecifier rule  51
	%start_pEnumerator rule  52
	%start_pListEnumerator rule  53
	%start_pDeclaration rule  54
	%start_pListDeclaration rule  55
	%start_pInitDeclarator rule  56
	%start_pListInitDeclarator rule  57
	%start_pInitializer rule  58
	%start_pListInitializer rule  59
	%start_pCompound_Statement rule  60
	%start_pStatement rule  61
	%start_pListStatement rule  62
	%start_pLabeledStatement rule  63
	%start_pExpressionStatement rule  64
	%start_pSelectionStatement rule  65
	%start_pIterationStatement rule  66
	%start_pMayBeExpression rule  67
	%start_pJumpStatement rule  68
	Ident           rule  69
	Char            rule  70
	Double          rule  71
	Integer         rule  72
	String          rule  73
	TranslationUnit rule  74
	External_Declaration rules 75, 76
	ListExternal_Declaration rules 77, 78
	FunctionDefinition rule  79
	DeclarationSpecifier rules 80, 81, 82
	ListDeclarationSpecifier rules 83, 84
	StorageClassSpecifier rules 85, 86, 87, 88, 89
	TypeSpecifier   rules 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100
	StructOrUnionSpecifier rules 101, 102, 103
	StructOrUnion   rules 104, 105
	StructDeclaration rule  106
	ListStructDeclaration rules 107, 108
	SpecifierQualifier rules 109, 110
	ListSpecifierQualifier rules 111, 112
	StructDeclarator rules 113, 114, 115
	ListStructDeclarator rules 116, 117
	Declarator      rules 118, 119
	Pointer         rule  120
	ListPointer     rules 121, 122
	TypeQualifier   rules 123, 124
	ListTypeQualifier rules 125, 126
	DirectDeclarator rules 127, 128, 129, 130, 131, 132
	ListIdent       rules 133, 134
	ConstantExpression rule  135
	Expression2     rules 136, 137
	Expression3     rules 138, 139
	Expression4     rules 140, 141
	Expression5     rules 142, 143
	Expression6     rules 144, 145
	Expression7     rules 146, 147
	Expression8     rules 148, 149, 150
	Expression9     rules 151, 152, 153, 154, 155
	Expression10    rules 156, 157, 158
	Expression11    rules 159, 160, 161
	Expression12    rules 162, 163, 164, 165
	Expression13    rules 166, 167
	Expression14    rules 168, 169, 170, 171, 172, 173
	Expression15    rules 174, 175, 176, 177, 178, 179, 180, 181
	Expression16    rules 182, 183, 184, 185
	Constant        rules 186, 187, 188
	Expression      rule  189
	Expression1     rules 190, 191
	ListExpression1 rules 192, 193
	AssignmentOperator rules 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204
	UnaryOperator   rules 205, 206, 207, 208, 209, 210
	TypeName        rules 211, 212
	ParameterTypeList rules 213, 214
	ParameterDeclaration rules 215, 216, 217
	ListParameterDeclaration rules 218, 219
	AbstractDeclarator rules 220, 221, 222
	DirectAbstractDeclarator rules 223, 224, 225, 226, 227, 228, 229, 230, 231
	EnumSpecifier   rules 232, 233, 234
	Enumerator      rules 235, 236
	ListEnumerator  rules 237, 238
	Declaration     rule  239
	ListDeclaration rules 240, 241
	InitDeclarator  rules 242, 243
	ListInitDeclarator rules 244, 245
	Initializer     rules 246, 247, 248
	ListInitializer rules 249, 250
	Compound_Statement rule  251
	Statement       rules 252, 253, 254, 255, 256, 257
	ListStatement   rules 258, 259
	LabeledStatement rules 260, 261, 262
	ExpressionStatement rule  263
	SelectionStatement rules 264, 265, 266
	IterationStatement rules 267, 268, 269
	MayBeExpression rules 270, 271
	JumpStatement   rules 272, 273, 274, 275

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pTranslationUnit -> . TranslationUnit        (rule 0)

	'('            reduce using rule 83
	'*'            reduce using rule 83
	'auto'         shift, and enter state 164
	'char'         shift, and enter state 165
	'const'        shift, and enter state 166
	'double'       shift, and enter state 167
	'enum'         shift, and enter state 168
	'extern'       shift, and enter state 169
	'float'        shift, and enter state 170
	'int'          shift, and enter state 171
	'long'         shift, and enter state 172
	'register'     shift, and enter state 173
	'short'        shift, and enter state 174
	'signed'       shift, and enter state 175
	'static'       shift, and enter state 176
	'struct'       shift, and enter state 177
	'typedef'      shift, and enter state 178
	'union'        shift, and enter state 179
	'unsigned'     shift, and enter state 180
	'void'         shift, and enter state 181
	'volatile'     shift, and enter state 182
	L_Ident        reduce using rule 83
	%eof           reduce using rule 77

	TranslationUnitgoto state 278
	External_Declarationgoto state 272
	ListExternal_Declarationgoto state 279
	FunctionDefinitiongoto state 274
	DeclarationSpecifiergoto state 275
	ListDeclarationSpecifiergoto state 271
	StorageClassSpecifiergoto state 156
	TypeSpecifier  goto state 157
	StructOrUnionSpecifiergoto state 158
	StructOrUnion  goto state 159
	TypeQualifier  goto state 160
	EnumSpecifier  goto state 161
	Declaration    goto state 276

State 1

	%start_pExternal_Declaration -> . External_Declaration    (rule 1)

	'('            reduce using rule 83
	'*'            reduce using rule 83
	'auto'         shift, and enter state 164
	'char'         shift, and enter state 165
	'const'        shift, and enter state 166
	'double'       shift, and enter state 167
	'enum'         shift, and enter state 168
	'extern'       shift, and enter state 169
	'float'        shift, and enter state 170
	'int'          shift, and enter state 171
	'long'         shift, and enter state 172
	'register'     shift, and enter state 173
	'short'        shift, and enter state 174
	'signed'       shift, and enter state 175
	'static'       shift, and enter state 176
	'struct'       shift, and enter state 177
	'typedef'      shift, and enter state 178
	'union'        shift, and enter state 179
	'unsigned'     shift, and enter state 180
	'void'         shift, and enter state 181
	'volatile'     shift, and enter state 182
	L_Ident        reduce using rule 83

	External_Declarationgoto state 277
	FunctionDefinitiongoto state 274
	DeclarationSpecifiergoto state 275
	ListDeclarationSpecifiergoto state 271
	StorageClassSpecifiergoto state 156
	TypeSpecifier  goto state 157
	StructOrUnionSpecifiergoto state 158
	StructOrUnion  goto state 159
	TypeQualifier  goto state 160
	EnumSpecifier  goto state 161
	Declaration    goto state 276

State 2

	%start_pListExternal_Declaration -> . ListExternal_Declaration    (rule 2)

	'('            reduce using rule 83
	'*'            reduce using rule 83
	'auto'         shift, and enter state 164
	'char'         shift, and enter state 165
	'const'        shift, and enter state 166
	'double'       shift, and enter state 167
	'enum'         shift, and enter state 168
	'extern'       shift, and enter state 169
	'float'        shift, and enter state 170
	'int'          shift, and enter state 171
	'long'         shift, and enter state 172
	'register'     shift, and enter state 173
	'short'        shift, and enter state 174
	'signed'       shift, and enter state 175
	'static'       shift, and enter state 176
	'struct'       shift, and enter state 177
	'typedef'      shift, and enter state 178
	'union'        shift, and enter state 179
	'unsigned'     shift, and enter state 180
	'void'         shift, and enter state 181
	'volatile'     shift, and enter state 182
	L_Ident        reduce using rule 83
	%eof           reduce using rule 77

	External_Declarationgoto state 272
	ListExternal_Declarationgoto state 273
	FunctionDefinitiongoto state 274
	DeclarationSpecifiergoto state 275
	ListDeclarationSpecifiergoto state 271
	StorageClassSpecifiergoto state 156
	TypeSpecifier  goto state 157
	StructOrUnionSpecifiergoto state 158
	StructOrUnion  goto state 159
	TypeQualifier  goto state 160
	EnumSpecifier  goto state 161
	Declaration    goto state 276

State 3

	%start_pFunctionDefinition -> . FunctionDefinition    (rule 3)

	'('            reduce using rule 83
	'*'            reduce using rule 83
	'auto'         shift, and enter state 164
	'char'         shift, and enter state 165
	'const'        shift, and enter state 166
	'double'       shift, and enter state 167
	'enum'         shift, and enter state 168
	'extern'       shift, and enter state 169
	'float'        shift, and enter state 170
	'int'          shift, and enter state 171
	'long'         shift, and enter state 172
	'register'     shift, and enter state 173
	'short'        shift, and enter state 174
	'signed'       shift, and enter state 175
	'static'       shift, and enter state 176
	'struct'       shift, and enter state 177
	'typedef'      shift, and enter state 178
	'union'        shift, and enter state 179
	'unsigned'     shift, and enter state 180
	'void'         shift, and enter state 181
	'volatile'     shift, and enter state 182
	L_Ident        reduce using rule 83

	FunctionDefinitiongoto state 270
	DeclarationSpecifiergoto state 267
	ListDeclarationSpecifiergoto state 271
	StorageClassSpecifiergoto state 156
	TypeSpecifier  goto state 157
	StructOrUnionSpecifiergoto state 158
	StructOrUnion  goto state 159
	TypeQualifier  goto state 160
	EnumSpecifier  goto state 161

State 4

	%start_pDeclarationSpecifier -> . DeclarationSpecifier    (rule 4)

	'auto'         shift, and enter state 164
	'char'         shift, and enter state 165
	'const'        shift, and enter state 166
	'double'       shift, and enter state 167
	'enum'         shift, and enter state 168
	'extern'       shift, and enter state 169
	'float'        shift, and enter state 170
	'int'          shift, and enter state 171
	'long'         shift, and enter state 172
	'register'     shift, and enter state 173
	'short'        shift, and enter state 174
	'signed'       shift, and enter state 175
	'static'       shift, and enter state 176
	'struct'       shift, and enter state 177
	'typedef'      shift, and enter state 178
	'union'        shift, and enter state 179
	'unsigned'     shift, and enter state 180
	'void'         shift, and enter state 181
	'volatile'     shift, and enter state 182

	DeclarationSpecifiergoto state 269
	StorageClassSpecifiergoto state 156
	TypeSpecifier  goto state 157
	StructOrUnionSpecifiergoto state 158
	StructOrUnion  goto state 159
	TypeQualifier  goto state 160
	EnumSpecifier  goto state 161

State 5

	%start_pListDeclarationSpecifier -> . ListDeclarationSpecifier    (rule 5)
